[package]
name = "centipede"
version = "0.3.1"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]
description = "A scheme for instantiating KMS's with recovery"
repository = "https://github.com/ZenGo-X/centipede"
license = "GPL-3.0"
categories = ["cryptography"]
keywords = ["cryptography", "crypto"]

[lib]
crate-type = ["lib"]

[dependencies]
serde = "1.0.164"
serde_derive = "1.0.164"
rayon = "1.7.0"
curv-kzen = { version = "0.10", default-features = false, path = "../curv", features = ["num-bigint"] }
sha2 = "0.10.7"
generic-array = "0.14.7"

[dependencies.bulletproof-kzen]
version = "1.2.1"
path = "../bulletproofs"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
