[package]
name = "centipede"
version = "0.3.1"
edition = "2021"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]
description = "A scheme for instantiating KMS's with recovery"
repository = "https://github.com/ZenGo-X/centipede"
license = "GPL-3.0"
categories = ["cryptography"]
keywords = ["cryptography", "crypto"]

[lib]
crate-type = ["lib"]

[dependencies]
serde = "1.0.164"
serde_derive = "1.0.164"
rayon = "1.7.0"
sha2 = "0.10.7"
generic-array = "0.14.7"
curv-kzen = { git = "https://github.com/xmrket/curv.git", features = ["num-bigint"] }
bulletproof-kzen = { git = "https://github.com/xmrket/bulletproofs.git" }


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false
